// --------------------------------------------------------
// 1. AUTHENTICATIE (Laravel Standaard)
// --------------------------------------------------------

Table roles {
  id int [pk, increment]
  name varchar(50) [unique]
  guard_name varchar(50) [default: 'web']
  created_at timestamp
  updated_at timestamp
}

Table users {
  id int [pk, increment]
  role_id int
  name varchar(255)
  email varchar(255) [unique]
  email_verified_at timestamp
  password varchar(255)
  remember_token varchar(100)
  created_at timestamp
  updated_at timestamp
}

Ref: users.role_id > roles.id

// --------------------------------------------------------
// 2. STAMGEGEVENS (Adressen & Categorieën)
// --------------------------------------------------------

Table adressen {
  id int [pk, increment]
  straat varchar(255)
  huisnummer varchar(20)
  postcode char(6)
  plaats varchar(100)
  is_actief tinyint [default: 1]
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Table product_categorieen {
  id int [pk, increment]
  naam varchar(100) [unique]
  is_actief tinyint [default: 1]
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Table wensen {
  id int [pk, increment]
  omschrijving varchar(100) [unique]
  is_actief tinyint [default: 1]
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Table allergenen {
  id int [pk, increment]
  naam varchar(100) [unique]
  is_actief tinyint [default: 1]
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

// --------------------------------------------------------
// 3. PARTIJEN (Leveranciers & Klanten)
// --------------------------------------------------------

Table contactpersonen {
  id int [pk, increment]
  contact_naam varchar(255)
  email varchar(255)
  telefoon varchar(20)
  is_actief tinyint [default: 1]
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Table leveranciers {
  id int [pk, increment]
  bedrijfsnaam varchar(255)
  adres_id int
  contactpersoon_id int
  is_actief tinyint [default: 1]
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Ref: leveranciers.adres_id > adressen.id
Ref: leveranciers.contactpersoon_id > contactpersonen.id

Table gezinnen {
  id int [pk, increment]
  gezins_naam varchar(255)
  volwassenen tinyint
  kinderen tinyint
  babys tinyint
  is_actief tinyint [default: 1]
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Table klanten {
  id int [pk, increment]
  naam varchar(255)
  email varchar(255) [unique]
  telefoon varchar(20)
  adres_id int
  gezin_id int
  is_actief tinyint [default: 1]
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Ref: klanten.adres_id > adressen.id
Ref: klanten.gezin_id > gezinnen.id

// --------------------------------------------------------
// 4. PRODUCTEN & EIGENSCHAPPEN
// --------------------------------------------------------

Table producten {
  id int [pk, increment]
  product_naam varchar(255) [unique]
  ean char(13) [unique]
  categorie_id int
  aantal_voorraad int
  magazijn_locatie varchar(50)
  is_actief tinyint [default: 1]
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Ref: producten.categorie_id > product_categorieen.id

Table product_kenmerken {
  id int [pk, increment]
  product_id int
  wens_id int
  is_actief tinyint
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Ref: product_kenmerken.product_id > producten.id
Ref: product_kenmerken.wens_id > wensen.id

Table product_allergenen {
  id int [pk, increment]
  product_id int
  allergie_id int
  is_actief tinyint
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Ref: product_allergenen.product_id > producten.id
Ref: product_allergenen.allergie_id > allergenen.id

// --------------------------------------------------------
// 5. PROCES (Leveringen & Pakketten)
// --------------------------------------------------------

Table leveringen {
  id int [pk, increment]
  leverancier_id int
  leverdatum_tijd datetime(6)
  eerstvolgende_levering datetime(6)
  is_actief tinyint
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Ref: leveringen.leverancier_id > leveranciers.id

Table levering_producten {
  id int [pk, increment]
  levering_id int
  product_id int
  aantal int
  is_actief tinyint
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Ref: levering_producten.levering_id > leveringen.id
Ref: levering_producten.product_id > producten.id

Table voedselpakketten {
  id int [pk, increment]
  klant_id int
  datum_samenstelling datetime
  datum_uitgifte datetime
  is_actief tinyint
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Ref: voedselpakketten.klant_id > klanten.id

Table voedselpakket_producten {
  id int [pk, increment]
  voedselpakket_id int
  product_id int
  aantal tinyint
  is_actief tinyint
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Ref: voedselpakket_producten.voedselpakket_id > voedselpakketten.id
Ref: voedselpakket_producten.product_id > producten.id

// --------------------------------------------------------
// 6. KLANT SPECIFIEK
// --------------------------------------------------------

Table klant_wensen {
  id int [pk, increment]
  klant_id int
  wens_id int
  is_actief tinyint
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Ref: klant_wensen.klant_id > klanten.id
Ref: klant_wensen.wens_id > wensen.id

Table klant_allergenen {
  id int [pk, increment]
  klant_id int
  allergie_id int
  is_actief tinyint
  opmerking varchar(255)
  datum_aangemaakt timestamp
  datum_gewijzigd timestamp
}

Ref: klant_allergenen.klant_id > klanten.id
Ref: klant_allergenen.allergie_id > allergenen.id
